# CG-Algorithm

./: .gitignore  CMakeLists.txt
algos/: CMakeLists.txt
algos/ibl/: CMakeLists.txt  background.vert  background_pass.h  brdflut.frag  brdflut_pass.h  cubemap.vert  equirectangular_to_cubemap.frag  hdrmap2cubemap_pass.h  ibl.cpp  irradiance_convolution.frag  irradiance_cubemap_pass.h  pbr.frag  pbr.vert  pbr_render_pass.h  prefilter.frag  prefilter_pass.h
algos/test_pbr/: CMakeLists.txt  pbr.cpp  pbr.vert  pbr_gun.h  pbr_render_pass.h
include/: app.cpp  app.h  camera.cpp  camera.h  game_object.h  mesh.cpp  mesh.h  model.cpp  model.h  pbr_gun.h  pbr_render_pass.h  render_pass.h  resource_manager.cpp  resource_manager.h  shader.h  singleton.h  texture.cpp  texture.h
include/assimp/: revision.h
include/glad/: glad.h
lib/: assimp-vc143-mt.lib
lib/glad/: CMakeLists.txt
mylib/: CMakeLists.txt
mylib/include/: camera.h  common_render.h  framebuffer.h  game_object.h  light.h  model.h  resource_manager.h  shader.h  texture.h  util.h
mylib/src/: app.cpp  camera.cpp  framebuffer.cpp  mesh.cpp  resource_manager.cpp  shader.cpp  texture.cpp
shaders/: pbr.frag
src/: model_loading.cpp  pbr.cpp
